--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+ <div>
     <div class="scroller_container">
         <img src="images/Left.png" alt="left_arrow" onmousemove="_scroller.timer('left', 0)" 
         onmouseout="_scroller.stop()" height="100">
@@ -37,6 +38,7 @@
         <img src="images/Right.png" alt="right_arrow" onmousemove="_scroller.timer('right', 0)" 
         onmouseout="_scroller.stop()" height="100">
     </div>
+ </div>
 
     <script type="text/javascript" src="js/script.js"></script>
     
