--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
- <div>
+ <div class="film" style="background-image: url('images/editfilm.jpg'); width: 900px;">
     <div class="scroller_container">
         <img src="images/Left.png" alt="left_arrow" onmousemove="_scroller.timer('left', 0)" 
         onmouseout="_scroller.stop()" height="100">
@@ -15,22 +15,22 @@
             <div class="scroller_row" id="scroller_row">
                 <div id="scroller_rule">
                     <a href="#1" onclick="return !1">
-                        <img src="images/civic1.jpg" height="100" alt="img1">
+                        <img src="images/civic1.jpg" height="140" alt="img1">
                     </a>
                     <a href="#2" onclick="return !1">
-                        <img src="images/civic2.jpg" height="100" alt="img2">
+                        <img src="images/civic2.jpg" height="140" alt="img2">
                     </a>
                     <a href="#3" onclick="return !1">
-                        <img src="images/civic3.jpg" height="100" alt="img3">
+                        <img src="images/civic3.jpg" height="140" alt="img3">
                     </a>
                     <a href="#4" onclick="return !1">
-                        <img src="images/civic4.jpg" height="100" alt="img4">
+                        <img src="images/civic4.jpg" height="140" alt="img4">
                     </a>
                     <a href="#5" onclick="return !1">
-                        <img src="images/civic5.jpg" height="100" alt="img5">
+                        <img src="images/civic5.jpg" height="140" alt="img5">
                     </a>
                     <a href="#6" onclick="return !1">
-                        <img src="images/civic6.jpg" height="100" alt="img6">
+                        <img src="images/civic6.jpg" height="140" alt="img6">
                     </a>
                 </div>
             </div>
